page spans game name in the beginning

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <div class="ui__texts">
             <h1 class="text text--title">
-                <span>THE</span>
-                <span>CUBE</span>
+                <span>RUBIK TAC TOE</span>
+                <!-- <span>TAC TOE</span> -->
             </h1>
             <div class="text text--note">
                 Double tap to start
