index.html refers to the updated icons

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta property="og:site_name" content="Rubik Tac Toe - Three Dimensional Tic-Tac-Toe" />
     <meta property="og:title" content="Rubik Tac Toe - Three Dimensional Tic-Tac-Toe" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bsehovac.github.io" />
+    <meta property="og:url" content="https://frrmack.github.io" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@frrmack">
     <meta name="twitter:title" content="Rubik Tac Toe - Three Dimensional Tic-Tac-Toe">
-    <meta name="twitter:image" content="https://bsehovac.github.io/the-cube/assets/icons/twitter-card.png">
+    <meta name="twitter:image" content="https://frrmack.github.io/rubik-tac-toe/assets/icons/twitter-card.png">
     <meta name="twitter:description" content="See if you can navigate tic-tac-toe in three dimensions.">
 
     <meta name="mobile-web-app-capable" content="yes">
