Changed index title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Play tic-tac-toe in three dimensions!">
     <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 
-    <title>Rubik Tac Toe - Tic-tac-toe in Three Dimensions</title>
+    <title>Rubik Tac Toe - Three Dimensional Tic-tac-toe</title>
     <meta property="og:description" content="See if you can navigate tic-tac-toe in three dimensions." />
     <meta property="og:image" content="assets/icons/meta-image.png" />
     <meta property="og:site_name" content="Rubik Tac Toe - Three Dimensional Tic-Tac-Toe" />
